feat(scip): add end-to-end indexing and testing infrastructure
- Implement robust SCIP runner with extended indexing capabilities
- Add comprehensive test suites for runner, SHA, and toolchain modules
- Enhance git agent with new tooling and review functionality
- Integrate installer checksum verification and client improvements
- Update documentation for SCIP integration plan and project usage